--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ satp           0x8000000000080420       -9223372036854250464
 </p>
 </div>
 <div>
-    版权所有©️2021 无相之风战队
+    版权所有©️2021 无相之风战队 <a href="https://qf.rs/">返回主站</a>
 </div>
 <script>
 function onGdbSatpInput(obj) {
