--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <div>
+    <p>欢迎使用页表二进制查看工具！</p>
+</div>
+<div>
 <p>输入根页表gdb命令的输出：</p>
 <p>
 <textarea id="root-gdb" rows="4" cols="60" oninput="onGdbPageTableInput(this)">
